Fix: Watermark deformation, restrict editing to TM users, add terms clause

--- a/public/faq.html
+++ b/public/faq.html
@@ -556,6 +556,19 @@
                         </div>
                     </div>
 
+                    <div class="faq-item" data-keywords="average response concentration difference mean cluster">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>What's the difference between the average and response concentration?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p><strong>The average gives you a single number, but it doesn't represent any individual customer.</strong> For example, an average of loyalty=3.5 and satisfaction=7.8 tells you the mathematical centre of your data, but no customer actually has those exact scores.</p>
+                            <p><strong>Response concentration shows where your customers actually cluster.</strong> It reveals where most of your responses tend to be located on the chart—the real patterns in your data.</p>
+                            <p><strong>Why this matters:</strong> By comparing the concentration to the average, you can see how volume is affecting your numbers. If you have many customers clustered in one area but a few outliers pulling the average in a different direction, the concentration will show you the true story of where your customers are, while the average might be misleading.</p>
+                            <p>This helps you understand whether your averages are being skewed by outliers or whether they accurately represent where most of your customers actually sit.</p>
+                        </div>
+                    </div>
+
                 </div>
 
                 <!-- Getting Started Section -->
@@ -895,6 +908,25 @@ CUST002,6,4,Jane Doe</pre>
                         </div>
                     </div>
 
+                    <div class="faq-item" data-keywords="how filters work connection intelligence filter logic">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>How do filters work and what is "connection intelligence"?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p><strong>Applying filters:</strong> Use the filter controls in the chart interface to select criteria. You can filter by date ranges, specific attributes (like country or language), or score ranges. Multiple filters work together—only customers matching ALL your selected criteria will be shown.</p>
+                            <p><strong>Connection intelligence:</strong> When you apply filters, the tool automatically "connects" related data. For example, if you filter by a specific country, the tool will:</p>
+                            <ul>
+                                <li>Show only customers from that country on the chart</li>
+                                <li>Recalculate statistics and distributions for that filtered subset</li>
+                                <li>Update quadrant assignments based on the filtered data's midpoint</li>
+                                <li>Adjust all reports and analysis to reflect only the filtered customers</li>
+                            </ul>
+                            <p>This intelligent connection means your entire analysis—charts, statistics, reports, and recommendations—stays synchronised with your active filters. When you remove a filter, everything automatically updates to show the full dataset again.</p>
+                            <p><strong>Tip:</strong> Use filters to compare different segments. For example, filter by date range to see how customer satisfaction has changed over time, or filter by country to compare performance across regions.</p>
+                        </div>
+                    </div>
+
                     <div class="faq-item" data-keywords="scale detection, automatic normalisation, different scales, satisfaction scale">
                         <div class="faq-question" onclick="toggleFAQ(this)">
                             <h3>Does the tool work with different satisfaction scales?</h3>
@@ -1167,6 +1199,25 @@ CUST002,6,4,Jane Doe</pre>
                                 <li><strong>Action Plan:</strong> Strategic recommendations, proximity analysis, conversion opportunities, and risk warnings</li>
                             </ul>
                             <p>Both reports include visual charts and can be customised before export.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item" data-keywords="accept disclaimer actions report why permission">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>Why do I need to accept a disclaimer to see the Actions Report?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p><strong>The Actions Report contains strategic recommendations and analysis</strong> that could influence business decisions. Before generating it, we require you to accept our Report Disclaimer & Limitation of Liability.</p>
+                            <p><strong>Why this matters:</strong> The report is generated automatically using rule-based algorithms. While it provides valuable insights, it's important to understand that:</p>
+                            <ul>
+                                <li>The report is for general informational purposes only</li>
+                                <li>It is NOT professional, legal, financial, or regulated advice</li>
+                                <li>You are responsible for verifying the accuracy and suitability of any recommendations</li>
+                                <li>The tool processes your data automatically and cannot account for all business contexts</li>
+                            </ul>
+                            <p>By accepting the disclaimer, you acknowledge that you understand these limitations and agree to use the report appropriately. You can read the full disclaimer before accepting—it's available via the link in the warning box.</p>
+                            <p><strong>Note:</strong> The Data Report doesn't require acceptance because it only presents statistical facts about your data, not strategic recommendations.</p>
                         </div>
                     </div>
 
