Fix: Correct isPremium calculation, add delete to opps/risks, ensure all editing is TM-only

--- a/public/faq.html
+++ b/public/faq.html
@@ -587,7 +587,7 @@
                                         <li>Try sample data to explore (Explore mode)</li>
                                     </ul>
                                 </li>
-                                <li>Or try our demo mode with a guided tour: <a href="/tool/?demo=true" style="color: #3a863e; text-decoration: none; font-weight: 600;">Launch Demo →</a></li>
+                                <li>Or try our demo mode with a guided tour: <a href="/tool/?trial=true" style="color: #3a863e; text-decoration: none; font-weight: 600;">Launch Demo →</a></li>
                                 <li>View your customers automatically segmented into the four quadrants</li>
                                 <li>Use filters and analysis tools to gain insights</li>
                             </ol>
@@ -696,7 +696,7 @@ Jane Doe,2,3,jane@example.com,Canada</pre>
                             <p>Absolutely! You have two options to explore the tool:</p>
                             <ol>
                                 <li><strong>Explore mode:</strong> Click "Try Sample Data" to load sample customer data and explore all features freely</li>
-                                <li><strong>Demo mode:</strong> <a href="/tool/?demo=true" style="color: #3a863e; text-decoration: none; font-weight: 600;">Launch the guided demo tour →</a> to see the tool in action with step-by-step guidance</li>
+                                <li><strong>Demo mode:</strong> <a href="/tool/?trial=true" style="color: #3a863e; text-decoration: none; font-weight: 600;">Launch the guided demo tour →</a> to see the tool in action with step-by-step guidance</li>
                             </ol>
                             <p>Both options let you experience the full tool with realistic sample data before uploading your own.</p>
                         </div>
@@ -1439,8 +1439,9 @@ CUST002,6,4,Jane Doe</pre>
                     <p>Can't find the answer you're looking for? We're here to help.</p>
                     <div class="help-actions">
                         <a href="/tool/" class="btn btn-primary">Start Using the Tool</a>
-                        <a href="/tool/?demo=true" class="btn btn-secondary">Try Demo Mode</a>
+                        <a href="/tool/?trial=true" class="btn btn-secondary">Launch Demo Mode</a>
                     </div>
+                    <p style="margin-top: 12px; font-size: 0.9rem; color: #666;">Demo mode automatically loads sample data and starts a guided tour</p>
             </div>
         </div>
     </main>
