--- a/public/404.html
+++ b/public/404.html
@@ -721,7 +721,7 @@
                 box-shadow: 0 4px 12px rgba(0,0,0,0.1);
                 z-index: 10000;
                 max-width: 300px;
-                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+                font-family: 'Lato', sans-serif;
                 font-size: 14px;
                 animation: slideIn 0.3s ease-out;
             `;
