--- a/public/brand-plus-auth.html
+++ b/public/brand-plus-auth.html
@@ -201,7 +201,7 @@
 </nav>
 
 
-    <div style="display: flex; justify-content: center; align-items: center; min-height: 100vh; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;">
+    <div style="display: flex; justify-content: center; align-items: center; min-height: 100vh; font-family: 'Lato', sans-serif;">
         <div style="text-align: center;">
             <p>Redirecting...</p>
             <p><a href="/brand-plus.html?auth=success">Click here if you are not redirected</a></p>
