--- a/public/index.html
+++ b/public/index.html
@@ -185,7 +185,7 @@
             box-sizing: border-box;
         }
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            font-family: 'Lato', sans-serif;
             background: linear-gradient(135deg, #f8f9fa 0%, #ffffff 100%);
             display: flex;
             justify-content: center;
