--- a/public/404.html
+++ b/public/404.html
@@ -341,21 +341,36 @@
                     <h3>Popular Pages</h3>
                     <div class="links-grid">
                         <a href="/" class="link-card">
-                            <div class="link-icon">🛠️</div>
+                            <div class="link-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M12 2v20M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
+                                </svg>
+                            </div>
                             <div class="link-text">
-                                <strong>Customer Segmentation Tool</strong>
+                                <strong>Customer Segmentation</strong>
                                 <span>Start analyzing your customers</span>
                             </div>
                         </a>
                         <a href="/about.html" class="link-card">
-                            <div class="link-icon">📖</div>
+                            <div class="link-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/>
+                                    <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/>
+                                </svg>
+                            </div>
                             <div class="link-text">
                                 <strong>About segmentor.app</strong>
-                                <span>Learn about Segmentor</span>
+                                <span>Learn about segmentor</span>
                             </div>
                         </a>
                         <a href="/faq.html" class="link-card">
-                            <div class="link-icon">❓</div>
+                            <div class="link-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <circle cx="12" cy="12" r="10"/>
+                                    <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/>
+                                    <path d="M12 17h.01"/>
+                                </svg>
+                            </div>
                             <div class="link-text">
                                 <strong>FAQ</strong>
                                 <span>Get help and answers</span>
@@ -517,9 +532,11 @@
         .links-grid {
             display: -ms-grid;
             display: grid;
-            -ms-grid-columns: repeat(4, 1fr);
-            grid-template-columns: repeat(4, 1fr);
-            gap: var(--space-4);
+            -ms-grid-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(3, 1fr);
+            gap: var(--space-6);
+            max-width: 900px;
+            margin: 0 auto;
         }
 
         .link-card {
@@ -618,6 +635,14 @@
             .links-grid {
                 -ms-grid-columns: 1fr;
                 grid-template-columns: 1fr;
+                gap: var(--space-4);
+            }
+        }
+        
+        @media (max-width: 1024px) and (min-width: 769px) {
+            .links-grid {
+                -ms-grid-columns: repeat(2, 1fr);
+                grid-template-columns: repeat(2, 1fr);
             }
         }
         
