--- a/public/404.html
+++ b/public/404.html
@@ -567,6 +567,7 @@
         .link-card:hover {
             background: var(--primary-green);
             color: white;
+            border-color: var(--primary-green);
             -webkit-transform: translateY(-2px);
             -moz-transform: translateY(-2px);
             -ms-transform: translateY(-2px);
