Add green border to 404 page link cards for better visibility (corrected)

--- a/public/404.html
+++ b/public/404.html
@@ -554,6 +554,7 @@
             gap: var(--space-3);
             padding: var(--space-4);
             background: var(--background-light);
+            border: 2px solid var(--primary-green);
             -webkit-border-radius: 8px;
             -moz-border-radius: 8px;
             border-radius: 8px;
