Add browser translation protection for brand names and segment terms
- Add translate='no' attribute to logo elements in all HTML files to prevent spacing issues
- Protect segment names (Loyalists, Mercenaries, Hostages, Defectors, etc.) from translation across all components
- Add TranslationBanner component to warn users about browser translation
- Add meta tag 'google' content='notranslate' to all HTML files
- Fix logo spacing issue by protecting inner logo-m span element

--- a/public/brand-plus.html
+++ b/public/brand-plus.html
@@ -9,6 +9,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google" content="notranslate">
     
     <!-- SEO Meta Tags -->
     <title>Teresa Monroe Staff Login | segmentor.app</title>
@@ -618,8 +619,8 @@
 <nav class="main-navigation">
   <div class="nav-container">
     <div class="nav-logo">
-      <a href="/" class="logo-text">
-        <span class="logo-segmentor">seg<span class="logo-m">m</span>entor</span><span class="logo-app">.APP</span>
+      <a href="/" class="logo-text" translate="no">
+        <span class="logo-segmentor" translate="no">seg<span class="logo-m" translate="no">m</span>entor</span><span class="logo-app" translate="no">.APP</span>
       </a>
     </div>
     <div class="nav-links">
