--- a/public/contact.html
+++ b/public/contact.html
@@ -9,6 +9,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google" content="notranslate">
     
     <!-- Comprehensive SEO Meta Tags -->
     <title>Contact segmentor.app - Get Help & CX Programme | Customer Segmentation Tool</title>
@@ -92,7 +93,7 @@
   <div class="nav-container">
     <div class="nav-logo">
       <a href="/" class="logo-text" translate="no">
-        <span class="logo-segmentor" translate="no">seg<span class="logo-m">m</span>entor</span><span class="logo-app" translate="no">.APP</span>
+        <span class="logo-segmentor" translate="no">seg<span class="logo-m" translate="no">m</span>entor</span><span class="logo-app" translate="no">.APP</span>
       </a>
     </div>
     <div class="nav-links">
