--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google" content="notranslate">
     <title>segmentor.app - Professional Customer Segmentation Tool</title>
     <meta http-equiv="refresh" content="0; url=/tool/">
     <link rel="canonical" href="https://segmentor.app/tool/" />
@@ -244,8 +245,8 @@
 <nav class="main-navigation">
   <div class="nav-container">
     <div class="nav-logo">
-      <a href="/" class="logo-text">
-        <span class="logo-segmentor">seg<span class="logo-m">m</span>entor</span><span class="logo-app">.APP</span>
+      <a href="/" class="logo-text" translate="no">
+        <span class="logo-segmentor" translate="no">seg<span class="logo-m" translate="no">m</span>entor</span><span class="logo-app" translate="no">.APP</span>
       </a>
     </div>
     <div class="nav-links">
@@ -263,7 +264,7 @@
             <img src="/segmentor-logo.png" alt="segmentor.app" />
         </div>
         <div class="spinner"></div>
-        <div class="redirect-text">Redirecting to segmentor.app...</div>
+        <div class="redirect-text">Redirecting to <span translate="no">segmentor.app</span>...</div>
         <a href="/tool/" class="link">Click here if you are not redirected</a>
     </div>
     <script>
