--- a/public/tool/404.html
+++ b/public/tool/404.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google" content="notranslate">
     
     <!-- Basic SEO Meta Tags -->
     <title>Page Not Found - segmentor.app</title>
@@ -184,8 +185,8 @@
                         <a href="/about.html" class="link-card">
                             <div class="link-icon">📖</div>
                             <div class="link-text">
-                                <strong>About segmentor.app</strong>
-                                <span>Learn about Segmentor</span>
+                                <strong>About <span translate="no">segmentor.app</span></strong>
+                                <span>Learn about <span translate="no">Segmentor</span></span>
                             </div>
                         </a>
                         <a href="/faq.html" class="link-card">
