--- a/public/brand-plus-auth.html
+++ b/public/brand-plus-auth.html
@@ -170,6 +170,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google" content="notranslate">
     <title>Redirecting... - segmentor.app</title>
     <meta http-equiv="refresh" content="0; url=/brand-plus.html?auth=success">
     <!-- Favicon -->
@@ -187,8 +188,8 @@
 <nav class="main-navigation">
   <div class="nav-container">
     <div class="nav-logo">
-      <a href="/" class="logo-text">
-        <span class="logo-segmentor">seg<span class="logo-m">m</span>entor</span><span class="logo-app">.APP</span>
+      <a href="/" class="logo-text" translate="no">
+        <span class="logo-segmentor" translate="no">seg<span class="logo-m" translate="no">m</span>entor</span><span class="logo-app" translate="no">.APP</span>
       </a>
     </div>
     <div class="nav-links">
