--- a/public/terms.html
+++ b/public/terms.html
@@ -9,6 +9,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google" content="notranslate">
     <title>Terms of Service - segmentor.app</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -311,8 +312,8 @@ body {
 <nav class="main-navigation">
   <div class="nav-container">
     <div class="nav-logo">
-      <a href="/" class="logo-text">
-        <span class="logo-segmentor">seg<span class="logo-m">m</span>entor</span><span class="logo-app">.APP</span>
+      <a href="/" class="logo-text" translate="no">
+        <span class="logo-segmentor" translate="no">seg<span class="logo-m" translate="no">m</span>entor</span><span class="logo-app" translate="no">.APP</span>
       </a>
     </div>
     <div class="nav-links">
