--- a/public/tool/about.html
+++ b/public/tool/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google" content="notranslate">
     
     <!-- Comprehensive SEO Meta Tags -->
     <title>About segmentor.app - Privacy-First Customer Segmentation Tool | Customer Segmentation Analysis</title>
