Fix translation issues: banner text and logo spacing
- Add notranslate class to banner and use ref to set translate='no' directly on DOM
- Enhance logo replacement script to detect broken text and watch more aggressively
- Add notranslate class to all logo elements as backup protection
- Script now checks every 200ms and watches logo element directly for changes
- Fixes banner showing 'segment.app' instead of 'segmentor.app'
- Fixes logo spacing issue 'Seg m entor' by auto-replacing with image when translation detected

--- a/public/brand-plus.html
+++ b/public/brand-plus.html
@@ -613,14 +613,15 @@
         }
       }
     </style>
+    <script src="/logo-replacement.js"></script>
 </head>
 <body>
 
 <nav class="main-navigation">
   <div class="nav-container">
     <div class="nav-logo">
-      <a href="/" class="logo-text" translate="no">
-        <span class="logo-segmentor" translate="no">seg<span class="logo-m" translate="no">m</span>entor</span><span class="logo-app" translate="no">.APP</span>
+      <a href="/" class="logo-text notranslate" translate="no">
+        <span class="logo-segmentor notranslate" translate="no">seg<span class="logo-m notranslate" translate="no">m</span>entor</span><span class="logo-app notranslate" translate="no">.APP</span>
       </a>
     </div>
     <div class="nav-links">
