--- a/public/tool/404.html
+++ b/public/tool/404.html
@@ -23,6 +23,7 @@
     
     <!-- Branding -->
     <link rel="stylesheet" href="/assets/css/shared.css">
+    <script src="/logo-replacement.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@400;600;700&family=Jaro&display=swap" rel="stylesheet">
     
