--- a/public/404.html
+++ b/public/404.html
@@ -37,14 +37,15 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/favicon.ico">
+    <script src="/logo-replacement.js"></script>
 </head>
 <body>
 
 <nav class="main-navigation">
   <div class="nav-container">
     <div class="nav-logo">
-      <a href="/" class="logo-text" translate="no">
-        <span class="logo-segmentor" translate="no">seg<span class="logo-m" translate="no">m</span>entor</span><span class="logo-app" translate="no">.APP</span>
+      <a href="/" class="logo-text notranslate" translate="no">
+        <span class="logo-segmentor notranslate" translate="no">seg<span class="logo-m notranslate" translate="no">m</span>entor</span><span class="logo-app notranslate" translate="no">.APP</span>
       </a>
     </div>
     <div class="nav-links">
