--- a/public/brand-plus-auth.html
+++ b/public/brand-plus-auth.html
@@ -182,14 +182,15 @@
         // Immediate redirect after Cloudflare Access authentication
         window.location.href = '/brand-plus.html?auth=success';
     </script>
+    <script src="/logo-replacement.js"></script>
 </head>
 <body>
 
 <nav class="main-navigation">
   <div class="nav-container">
     <div class="nav-logo">
-      <a href="/" class="logo-text" translate="no">
-        <span class="logo-segmentor" translate="no">seg<span class="logo-m" translate="no">m</span>entor</span><span class="logo-app" translate="no">.APP</span>
+      <a href="/" class="logo-text notranslate" translate="no">
+        <span class="logo-segmentor notranslate" translate="no">seg<span class="logo-m notranslate" translate="no">m</span>entor</span><span class="logo-app notranslate" translate="no">.APP</span>
       </a>
     </div>
     <div class="nav-links">
