--- a/public/index.html
+++ b/public/index.html
@@ -233,6 +233,7 @@
             text-decoration: underline;
         }
     </style>
+    <script src="/logo-replacement.js"></script>
     <script>
         // Immediate redirect, preserving query parameters
         const queryString = window.location.search;
@@ -245,8 +246,8 @@
 <nav class="main-navigation">
   <div class="nav-container">
     <div class="nav-logo">
-      <a href="/" class="logo-text" translate="no">
-        <span class="logo-segmentor" translate="no">seg<span class="logo-m" translate="no">m</span>entor</span><span class="logo-app" translate="no">.APP</span>
+      <a href="/" class="logo-text notranslate" translate="no">
+        <span class="logo-segmentor notranslate" translate="no">seg<span class="logo-m notranslate" translate="no">m</span>entor</span><span class="logo-app notranslate" translate="no">.APP</span>
       </a>
     </div>
     <div class="nav-links">
