Update FAQ: Add mode explanation to response concentration question

--- a/public/faq.html
+++ b/public/faq.html
@@ -923,7 +923,7 @@ CUST002,6,4,Jane Doe</pre>
                         </div>
                         <div class="faq-answer">
                             <p><strong>The average gives you a single number, but it doesn't represent any individual customer.</strong> For example, an average of loyalty=3.5 and satisfaction=7.8 tells you the mathematical centre of your data, but no customer actually has those exact scores.</p>
-                            <p><strong>Response concentration shows where your customers actually cluster.</strong> It reveals where most of your responses tend to be located on the chart—the real patterns in your data.</p>
+                            <p>Response concentration shows where your customers actually cluster—identifying the mode (the most frequently occurring combinations) of your satisfaction-loyalty pairs, along with other frequent patterns. It reveals where most of your responses tend to be located on the chart—the real patterns in your data.</p>
                             <p><strong>Why this matters:</strong> By comparing the concentration to the average, you can see how volume is affecting your numbers. If you have many customers clustered in one area but a few outliers pulling the average in a different direction, the concentration will show you the true story of where your customers are, while the average might be misleading.</p>
                             <p>This helps you understand whether your averages are being skewed by outliers or whether they accurately represent where most of your customers actually sit.</p>
                         </div>
