Update about page heading from 'Need More Than Just Data?' to 'Need More?'

--- a/public/about.html
+++ b/public/about.html
@@ -485,7 +485,7 @@
 
             <!-- Expert Partnership Section -->
             <section class="section" aria-labelledby="expert-heading">
-                <h2 id="expert-heading" style="font-family: 'Montserrat', sans-serif; font-size: 2.2rem; font-weight: 600; color: #2c3e50; margin-bottom: 20px; text-align: center;">Need More Than Just Data?</h2>
+                <h2 id="expert-heading" style="font-family: 'Montserrat', sans-serif; font-size: 2.2rem; font-weight: 600; color: #2c3e50; margin-bottom: 20px; text-align: center;">Need More?</h2>
                 <p style="text-align: center; font-size: 1.2em; color: #666; margin-bottom: 40px;">While segmentor.app gives you powerful insights at your fingertips, transforming those insights into strategic action sometimes requires expert guidance.</p>
                 
                 <div style="display: flex; align-items: center; gap: 32px; margin-top: 32px; padding: 32px; background: linear-gradient(135deg, #f8f9fa 0%, #ffffff 100%); border-radius: 12px; border: 1px solid #e5e7eb; width: 100%; box-sizing: border-box;">
