--- a/public/terms.html
+++ b/public/terms.html
@@ -401,7 +401,7 @@ body {
             For all users, you may:
         </p>
         <ul>
-            <li>Export reports in various formats (PDF, Excel, PowerPoint)</li>
+            <li>Export reports in various formats (PDF, Excel)</li>
             <li>Modify exported reports using external software</li>
             <li>Customise formatting, styling, or presentation of exported materials</li>
             <li>Combine exported outputs with other materials or data</li>
